...
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/onboardingFragment"
        android:name="com.showerideas.aura.ui.onboarding.OnboardingFragment"
        android:label="Welcome">
        <action
            android:id="@+id/action_onboarding_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/onboardingFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
...
