<?xml version="1.0" encoding="utf-8"?>
<!-- PR-19: top-level toolbar menu hosting the Settings gear. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_title"
        app:showAsAction="always" />
</menu>
